# stm32duino_spi_dma

./: README.md  SPI-DMA-Usage.md  library.properties
.github/: FUNDING.yml
src/SPI/: CMakeLists.txt  SPI.cpp  SPI.h  SPIBasic.cpp  SPIBasic.h  SPIClass.cpp  SPIClass.h  SPIDMA.cpp  SPIDMA.h  SPIDMA_F1XX.cpp  SPIDMA_F1XX.h  SPIDMA_F3XX.cpp  SPIDMA_F3XX.h  SPIDMA_F4XX.cpp  SPIDMA_F4XX.h  SPIDMA_F7XX.cpp  SPIDMA_F7XX.h  SPIDMA_G4XX.cpp  SPIDMA_G4XX.h  SPIDMA_H5XX.cpp  SPIDMA_H5XX.h  SPIDMA_H7XX.cpp  SPIDMA_H7XX.h  SPIDMA_L4XX.cpp  SPIDMA_L4XX.h  SingleBufTransferCopy.cpp  SingleBufTransferCopy.h  SingleBufTransferInplace.cpp  SingleBufTransferInplace.h  SingleBufferTransfer.cpp  SingleBufferTransfer.h
